...
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.text.style.TextAlign
import androidx.compose.ui.unit.dp

const val LOADING_STATE_TEST_TAG = "screen_loading"
const val MESSAGE_STATE_TEST_TAG = "screen_message"

@Composable
fun LoadingStateContent(
    contentPadding: PaddingValues,
    modifier: Modifier = Modifier
...
